--- a/Main/Source code/Elysium/Themes/Buttons/RepeatButton.xaml
+++ b/Main/Source code/Elysium/Themes/Buttons/RepeatButton.xaml
@@ -5,8 +5,9 @@
         <ResourceDictionary Source="/Elysium;component/Themes/Buttons/ButtonBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ButtonsBaseStyle}">        
-        <Setter Property="OverridesDefaultStyle" Value="True"/>        
+    <Style TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ButtonsBaseStyle}">
+        <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
+        <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->        
     </Style>
 
 </ResourceDictionary>
