--- a/Main/Source code/Elysium/Themes/Selectors/ComboBoxItem.xaml
+++ b/Main/Source code/Elysium/Themes/Selectors/ComboBoxItem.xaml
@@ -5,9 +5,10 @@
         <ResourceDictionary Source="/Elysium;component/Themes/Selectors/SelectorsItemsBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource SelectorsItemsBaseStyle}">        
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>        
-        <Setter Property="OverridesDefaultStyle" Value="True"/>
+    <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource SelectorsItemsBaseStyle}">
+        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
+        <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
+        <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
         <Style.Triggers>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
