--- a/Main/Source code/Elysium/Themes/TextBoxes/PasswordBox.xaml
+++ b/Main/Source code/Elysium/Themes/TextBoxes/PasswordBox.xaml
@@ -9,7 +9,8 @@
         <Setter Property="PasswordChar" Value="●"/>
         <Setter Property="CaretBrush" Value="{StaticResource ForegroundBrush}"/>
         <Setter Property="SelectionBrush" Value="{StaticResource MiddleLightBrush}"/>
-        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
+        <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
         <Style.Triggers>
             <Trigger Property="IsKeyboardFocusWithin" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource AccentBrush}"/>
