--- a/Main/Source code/Elysium/Themes/TextBoxes/RichTextBox.xaml
+++ b/Main/Source code/Elysium/Themes/TextBoxes/RichTextBox.xaml
@@ -11,7 +11,8 @@
                 <Setter Property="OverridesDefaultStyle" Value="True"/>
             </Style>
         </Style.Resources>
-        <Setter Property="OverridesDefaultStyle" Value="True"/>        
+        <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
+        <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->        
     </Style>
     
 </ResourceDictionary>
