--- a/Main/Source code/Elysium/Themes/TextBoxes/TextBox.xaml
+++ b/Main/Source code/Elysium/Themes/TextBoxes/TextBox.xaml
@@ -6,7 +6,8 @@
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource TextBoxBaseStyle}">
-        <Setter Property="OverridesDefaultStyle" Value="True"/>        
+        <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
+        <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->        
     </Style>
 
 </ResourceDictionary>
